hard-gists/6230787/run.log
=== Docker Run Log for 6230787 ===
Started at: Mi 29. Okt 16:27:10 CET 2025

[2025-10-29 16:27:11] START: Running container for 6230787
[2025-10-29 16:27:11] SUCCESS: Container 26f677fe343211fa5290e8fa507105f63db87cf338c987ca9beeabc96cb32e9c started for 6230787
=== Container logs for 6230787 ===
  File "/snippet.py", line 78
    print "Converged at iteration", it + 1
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6230787 ===
[2025-10-29 16:27:13] INFO: Container 26f677fe343211fa5290e8fa507105f63db87cf338c987ca9beeabc96cb32e9c has stopped
